package Modelo;

public class CursoRegular {
}
