package Modelo;

public class Docente {
    private String nombre;
    private String especialidad;
}
