package Modelo;

public class Evaluacion {
}
