package Modelo;

public class Matricula {
}
